# ChangeLog for sci-physics/espresso++
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Oct 2013; Christoph Junghans <ottxor@gentoo.org> espresso++-9999.ebuild:
  sync with gx86

  02 Aug 2013; Christoph Junghans <ottxor@gentoo.org> espresso++-9999.ebuild:
  added hostfingerprint

  14 Jun 2013; Justin Lecher <jlec@gentoo.org> espresso++-9999.ebuild,
  metadata.xml:
  Bump to EAPI=5 and drop KEYWORDS of live ebuilds; bump to new python eclasses

  26 Jan 2013; Christoph Junghans <ottxor@gentoo.org> espresso++-9999.ebuild:
  sync with gx86

  23 Dec 2012; Christoph Junghans <ottxor@gentoo.org> espresso++-9999.ebuild:
  sync with gx86

*espresso++-9999 (09 Oct 2012)

  09 Oct 2012; Christoph Junghans <ottxor@gentoo.org> +espresso++-9999.ebuild,
  +metadata.xml:
  initial commit (thx to Torsten Stuehn)