@@ -1,6 +1,10 @@
 # ChangeLog for sci-physics/espresso++
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Feb 2014; Christoph Junghans <ottxor@gentoo.org> espresso++-9999.ebuild,
+  metadata.xml:
+  live ebuild update
 
   09 Oct 2013; Christoph Junghans <ottxor@gentoo.org> espresso++-9999.ebuild:
   sync with gx86
